--- a/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
+++ b/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
@@ -1,18 +1,84 @@
+/* Home Button */
 .OperatorButtonHome{
-    /* Font */
-    font-family: 'Arial';
-    font-size: 70px;
-    font-weight: bold;
-    color: #000000;
     /* Button */
     background-color: #C1C6C8; /* button color */ 
     height: 175px;
-    width: 550px;
+    width: 175px;
     border-radius: 100px 100px 100px 100px;
     border: none;
     cursor: pointer;
     /* Position */
     position: absolute;
-    top: 50%;
-    left: 35%;
+    top: 78%;
+    left: 10%;
+}
+
+/* Map Button */
+.OperatorButtonMap{
+    /* Button */
+    background-color: #C1C6C8; /* button color */ 
+    height: 175px;
+    width: 175px;
+    border-radius: 100px 100px 100px 100px;
+    border: none;
+    cursor: pointer;
+    /* Position */
+    position: absolute;
+    top: 78%;
+    left: 25%;
+}
+
+/* System Button */
+.OperatorButtonSys{
+    /* Button */
+    background-color: #C1C6C8; /* button color */ 
+    height: 175px;
+    width: 175px;
+    border-radius: 100px 100px 100px 100px;
+    border: none;
+    cursor: pointer;
+    /* Position */
+    position: absolute;
+    top: 78%;
+    left: 40%;
+}
+
+/* Camera Button */
+.OperatorButtonCam{
+    /* Button */
+    background-color: #C1C6C8; /* button color */ 
+    height: 175px;
+    width: 175px;
+    border-radius: 100px 100px 100px 100px;
+    border: none;
+    cursor: pointer;
+    /* Position */
+    position: absolute;
+    top: 78%;
+    left: 55%;
+}
+
+/* Sensory Button */
+.OperatorButtonSens{
+    /* Button */
+    background-color: #C1C6C8; /* button color */ 
+    height: 175px;
+    width: 175px;
+    border-radius: 100px 100px 100px 100px;
+    border: none;
+    cursor: pointer;
+    /* Position */
+    position: absolute;
+    top: 78%;
+    left: 70%;
+}
+
+/* Operator Page Background Color*/
+.OperatorPageContainer{
+    background-color: #1f1f1f;
+    height: 100vh;
+    width: 100vw;
+    display: flex;  /* used to adjust for other resolutions */
+    justify-content: center;
+    align-items: center;
 }
