Change to Map Button
Altered Color of the map button on operator map page to display that you are on that page

--- a/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
+++ b/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
@@ -107,3 +107,8 @@
     justify-content: center;
     align-items: center;
 }
+
+/* Active Button Color */
+.ButtonActive{
+    background-color: #737577;
+}
