Addition Of Remaining Operator Pages
Added working buttons for all operator pages. Every page except map is unfinished

--- a/CavsUI/CavsUiReact/src/Home/HomePageButtons.module.css
+++ b/CavsUI/CavsUiReact/src/Home/HomePageButtons.module.css
@@ -5,6 +5,7 @@
     font-size: 140px;
     font-weight: bold;
     color: #ffffff;
+    -webkit-text-stroke: 3px black;
     /* Position */
     position: absolute;
     top: 15%;
