--- a/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
+++ b/CavsUI/CavsUiReact/src/Operator/OperatorPageButtons.module.css
@@ -30,7 +30,7 @@
     /* Position */
     position: absolute;
     top: 78%;
-    left: 25%;
+    left: 28%;
     /* Image*/
     background-image: url("../assets/map.png"); /* image: Flaticon.com Pixel Perfect */
     background-size: 60%;
@@ -50,7 +50,7 @@
     /* Position */
     position: absolute;
     top: 78%;
-    left: 40%;
+    align-items: center;
     /* Image*/
     background-image: url("../assets/sysDiag.png"); /* image: Flaticon.com Gravisio */
     background-size: 60%;
@@ -70,7 +70,7 @@
     /* Position */
     position: absolute;
     top: 78%;
-    left: 55%;
+    right: 28%;
     /* Image*/
     background-image: url("../assets/camera.png"); /* image: Flaticon.com Freepik */
     background-size: 60%;
@@ -90,7 +90,7 @@
     /* Position */
     position: absolute;
     top: 78%;
-    left: 70%;
+    right: 10%;
     /* Image*/
     background-image: url("../assets/eye.png"); /* image: Flaticon.com Gregor Cresnar */
     background-size: 60%;
