--- a/CavsUI/CavsUiReact/src/Sponsor/SponsorShapes.module.css
+++ b/CavsUI/CavsUiReact/src/Sponsor/SponsorShapes.module.css
@@ -414,3 +414,20 @@
     /* Color */
     background-color: #5D1725;
 }
+
+/* Diagnostics New Line*/
+.SponsorDateText{
+    /* Text */
+    word-spacing: 20%;
+    font-family: 'Arial';
+    font-size: 30px;
+    font-weight: bold;
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    /* Dimensions */
+    position: absolute;
+    z-index: 3;
+    top: 2%;
+    right: 3%;
+}
