--- a/src/Operator/OperatorShapes.module.css
+++ b/src/Operator/OperatorShapes.module.css
@@ -82,9 +82,10 @@
     font-weight: bold;
     color: #C1C6C8;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    padding-right: 40px;
+    align-text: center;
+    /*padding-right: 40px;*/
     /* Dimensions */
     width: 22%;
     height: 11.75%;
@@ -107,6 +108,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 69.5%;
     height: 52%;
     position: absolute;
@@ -125,6 +129,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     height: 32%;
     position: absolute;
@@ -143,6 +150,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     height: 30%;
     position: absolute;
@@ -161,6 +171,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 63%;
@@ -168,10 +179,10 @@
     z-index: 3;
     top: 13.5%;
     left: .25%;
-    border: 2px solid #C1C6C8;
-    border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
+    /*border: 2px solid #C1C6C8;*/
+    border-radius: 0px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Mapping and Planning */
@@ -183,6 +194,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 30.75%;
@@ -190,10 +202,10 @@
     z-index: 3;
     top: 45.75%;
     right: .25%;
-    border: 2px solid #C1C6C8;
+    /*border: 2px solid #C1C6C8;
     border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Control */
@@ -205,6 +217,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 30.75%;
@@ -212,10 +225,10 @@
     z-index: 3;
     top: 13.5%;
     right: .25%;
-    border: 2px solid #C1C6C8;
+    /*border: 2px solid #C1C6C8;
     border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Camera  (Camera Page) */
@@ -226,6 +239,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40%;
     height: 63.5%;
     position: absolute;
@@ -247,6 +263,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 59.5%;
     height: 52%;
     position: absolute;
@@ -302,6 +321,9 @@
 /*  unknown Box 1 (Sensory Page) */
 .OperatorSensBox1{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -337,6 +359,9 @@
 /*  unknown Box 2 (Sensory Page) */
 .OperatorSensBox2{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -372,6 +397,9 @@
 /*  unknown Box 3 (Sensory Page) */
 .OperatorSensBox3{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -407,6 +435,9 @@
 /*  unknown Box 4 (Sensory Page) */
 .OperatorSensBox4{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
