--- a/src/Passenger/PassengerShapes.module.css
+++ b/src/Passenger/PassengerShapes.module.css
@@ -65,9 +65,9 @@
     font-weight: bold;
     color: #C1C6C8;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    padding-right: 40px;
+    /*padding-right: 40px;
     /* Dimensions */
     width: 22%;
     height: 11.75%;
@@ -90,6 +90,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 69.5%;
     height: 52%;
     position: absolute;
@@ -108,6 +111,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     height: 32%;
     position: absolute;
@@ -126,6 +132,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30%;
     height: 30%;
     position: absolute;
@@ -144,6 +153,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 63%;
@@ -151,10 +161,10 @@
     z-index: 3;
     top: 13.5%;
     left: .25%;
-    border: 2px solid #C1C6C8;
+    /*border: 2px solid #C1C6C8;
     border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Mapping and Planning */
@@ -166,6 +176,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 30.75%;
@@ -173,10 +184,10 @@
     z-index: 3;
     top: 45.75%;
     right: .25%;
-    border: 2px solid #C1C6C8;
+    /*border: 2px solid #C1C6C8;
     border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Control */
@@ -188,6 +199,7 @@
     color: #C1C6C8;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* Dimensions */
     width: 49.35%;
     height: 30.75%;
@@ -195,10 +207,10 @@
     z-index: 3;
     top: 13.5%;
     right: .25%;
-    border: 2px solid #C1C6C8;
-    border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
+    /*border: 2px solid #C1C6C8;
+    /*border-radius: 100px 100px 100px 100px; /* top-left, top-right, bottom-right, bottom-left */
     /* Color */
-    background-color: #5D1725;
+    background-color: #C1C6C8;
 }
 
 /* Camera  (Camera Page) */
@@ -209,6 +221,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40%;
     height: 63.5%;
     position: absolute;
@@ -227,6 +242,9 @@
     font-weight: bold;
     color: #000000;
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 59.5%;
     height: 52%;
     position: absolute;
@@ -279,6 +297,9 @@
 /*  unknown Box 1 (Sensory Page) */
 .PassengerSensBox1{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -314,6 +335,9 @@
 /*  unknown Box 2 (Sensory Page) */
 .PassengerSensBox2{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -349,6 +373,9 @@
 /*  unknown Box 3 (Sensory Page) */
 .PassengerSensBox3{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
@@ -384,6 +411,9 @@
 /*  unknown Box 4 (Sensory Page) */
 .PassengerSensBox4{
     /* Dimensions */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 24.5%;
     height: 52.15%;
     position: absolute;
